# HiPLARb

./: DESCRIPTION  InstallScript  NAMESPACE  configure  configure.ac  patch_R_2_15_2.sh  patchfile
R/: hiplar.R  hiplar_backsolve.R  hiplar_chol.R  hiplar_det.R  hiplar_eigen.R  hiplar_kappa.R  hiplar_qr.R  hiplar_solve.R  hiplar_svd.R  zzz.R
man/: HiPLARb-package.Rd  hiplarb_do_xover_timings.Rd  hiplarb_mode.Rd  hiplarb_param.Rd
src/: Makevars.in  P.c  P.h  hiplar.c  hiplar_at.c  hiplar_at.h  hiplar_dbg.h  hiplar_init.c  hiplar_matprod.c  magma_matprod.c  magma_matprod.h  magma_wrapper.c  magma_wrapper.h  magma_wrapper_init.c  magma_wrapper_init.h  plasma_matprod.c  plasma_matprod.h  plasma_wrapper.c  plasma_wrapper.h  plasma_wrapper_init.c  plasma_wrapper_init.h  util.c
